--- a/README
+++ b/README
@@ -8,3 +8,4 @@ mundane tasks.
 This program cannot do anything that the user cannot do in the real client.
 
 ==============================================================================
+I HAVE CLONED THIS, BUT HOW DO I RUN IT?
